// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Body /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-customizable-body
      TEST_CLASSNAME
      {
        background-color: #ffffff;
        color: #343a41;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 1.5rem;
        font-weight: 400;
        line-height: 2.0rem;
      }
/>
`;

exports[`<Body /> with children passed matches its snapshot 1`] = `
<div
  className=
      y-customizable-body
      {
        background-color: #ffffff;
        color: #343a41;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 1.5rem;
        font-weight: 400;
        line-height: 2.0rem;
      }
>
  CHILDREN
</div>
`;

exports[`<Body /> with default options matches its snapshot 1`] = `
<div
  className=
      y-customizable-body
      {
        background-color: #ffffff;
        color: #343a41;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 1.5rem;
        font-weight: 400;
        line-height: 2.0rem;
      }
/>
`;
